[package]
name = "near-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
near-sandbox-utils = "0.2.0"

[dev-dependencies]
# workspaces = { path = "./workspaces"}
near-workspaces = "0.2.1" 
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
serde = "1.0"
serde_with = "1"

[workspace]
# must add all primary contract folders to members list
# workspaces allow multiple rust folders (contains `Cargo.toml`) to 
# share a single `Cargo.lock` and output directory
members = [
    "contracts/boilerplate",
]

# [[test]]
# name = "test"
# path = "tests/test.rs"
# test = true




